--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="./assets/greensockScripts/ScrambleTextPlugin.min.js"></script> > <!--Animation library-->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <script src='https://www.google.com/recaptcha/api.js'></script>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
